[package]
name = "edgeware-rpc"
version = "3.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "14.0.3"
sc-client-api = { git = "https://github.com/paritytech/substrate.git" }
sp-api = { git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git" }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }